fix: adapt z-index for phone compatibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -580,7 +580,7 @@ footer {
     header {
         padding-right: 12px;
         /* Always keep header on top */
-        z-index: 10000;
+        z-index: 9999;
     }
 
     nav {
